--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "console.table": "^0.10.0",
     "dotenv": "^16.0.0",
-    "inquirer": "^8.2.4",
+    "inquirer": "7.0.0",
     "mysql2": "^2.3.3"
   }
 }
